train vgg16 again

--- a/model_merge.ipynb
+++ b/model_merge.ipynb
@@ -177,7 +177,76 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_features(model):\n",
+    "    image_datagen = image.ImageDataGenerator(preprocessing_function=preprocess_input)\n",
+    "\n",
+    "    train_generator = train_datagen.flow_from_directory(\n",
+    "                                        train_path,\n",
+    "                                        target_size=image_size,\n",
+    "                                        batch_size=batch_size,\n",
+    "                                        class_mode='categorical',\n",
+    "                                        shuffle=False)\n",
+    "\n",
+    "    validation_generator = validation_datagen.flow_from_directory(\n",
+    "                                        validation_path,\n",
+    "                                        target_size=image_size,\n",
+    "                                        batch_size=batch_size,                                    \n",
+    "                                        class_mode='categorical',\n",
+    "                                        shuffle=False)\n",
+    "    \n",
+    "    train_data = model.predict_generator(train_generator,nb_train_samples)\n",
+    "    train_label = train_generator.classes\n",
+    "    \n",
+    "    validation_data = model.predict_generator(validation_generator,nb_val_samples)\n",
+    "    validation_label = validation_generator.classes\n",
+    "    \n",
+    "    return train_data,train_label,validation_data,validation_label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_model = load_model('vgg16_final_model.h5')\n",
+    "vgg16_model.name = 'vgg16_model'\n",
+    "\n",
+    "vgg19_model = load_model('vgg19_final_model.h5')\n",
+    "vgg19_model.name = 'vgg19_model'\n",
+    "\n",
+    "train_data = []\n",
+    "train_label = []\n",
+    "validation_data = []\n",
+    "validation_label = []\n",
+    "\n",
+    "for model in [vgg16_model,vgg19_model]:\n",
+    "    td,tl,vd,vl = get_features(model)\n",
+    "    train_data.append(td)\n",
+    "    train_label.append(tl)\n",
+    "    validation_data.append(vd)\n",
+    "    validation_label.append(vl)\n",
+    "    \n",
+    "train_data = np.concatenate(train_data, axis=1)\n",
+    "train_label = np.concatenate(train_label, axis=1)\n",
+    "validation_data = np.concatenate(validation_data, axis=1)\n",
+    "validation_label = np.concatenate(validation_label, axis=1)\n",
+    "\n",
+    "(train_data,train_label) = shuffle(train_data,train_label)\n",
+    "\n",
+    "model_input = Input(shape=train_data.shape[1:])\n",
+    "x = Dropout(0.5)(model_input)\n",
+    "x = Dense(10, activation='softmax')(x)\n",
+    "merge_model = Model(inputs=model_input,outputs=x)\n",
+    "\n",
+    "model.compile(optimizer='adam',\n",
+    "              loss='categorical_crossentropy',\n",
+    "              metrics=['accuracy'])\n",
+    "model.fit(train_data,train_label,batch_size=batch_size,epochs=10,\n",
+    "          validation_data=(validation_data,validation_label),\n",
+    "          shuffle=True)"
+   ]
   }
  ],
  "metadata": {
