--- a/vgg16.ipynb
+++ b/vgg16.ipynb
@@ -93,30 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vgg16_base_model = VGG16(weights='imagenet', include_top=False,input_shape=(224,224,3))\n",
-    "\n",
-    "x = vgg16_base_model.output\n",
-    "\n",
-    "x = Flatten()(x)\n",
-    "x = Dense(256, activation='relu')(x)\n",
-    "x = BatchNormalization()(x)\n",
-    "x = Dropout(0.5)(x)\n",
-    "\n",
-    "x = Dense(256, activation='relu')(x)\n",
-    "x = BatchNormalization()(x)\n",
-    "x = Dropout(0.5)(x)\n",
-    "predict = Dense(10, activation='softmax')(x)\n",
-    "\n",
-    "vgg16_model = Model(inputs=vgg16_base_model.input, outputs=predict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +133,36 @@
     "                                    class_mode='categorical',\n",
     "                                    shuffle=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vgg16_base_model = VGG16(weights='imagenet', include_top=False,input_shape=(224,224,3))\n",
+    "\n",
+    "x = vgg16_base_model.output\n",
+    "\n",
+    "x = Flatten()(x)\n",
+    "x = Dense(256, activation='relu')(x)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Dropout(0.5)(x)\n",
+    "\n",
+    "x = Dense(256, activation='relu')(x)\n",
+    "x = BatchNormalization()(x)\n",
+    "x = Dropout(0.5)(x)\n",
+    "predict = Dense(10, activation='softmax')(x)\n",
+    "\n",
+    "vgg16_model = Model(inputs=vgg16_base_model.input, outputs=predict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -573,25 +580,35 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/15\n",
-      "156/156 [==============================] - 396s 3s/step - loss: 0.0718 - acc: 0.9778 - val_loss: 1.8490 - val_acc: 0.7292\n",
+      "156/156 [==============================] - 576s 4s/step - loss: 0.0405 - acc: 0.9879 - val_loss: 1.6407 - val_acc: 0.6545\n",
       "Epoch 2/15\n",
-      "156/156 [==============================] - 403s 3s/step - loss: 0.0402 - acc: 0.9882 - val_loss: 0.3468 - val_acc: 0.9151\n",
+      "156/156 [==============================] - 394s 3s/step - loss: 0.0298 - acc: 0.9907 - val_loss: 0.8813 - val_acc: 0.8084\n",
       "Epoch 3/15\n",
-      "156/156 [==============================] - 393s 3s/step - loss: 0.0337 - acc: 0.9899 - val_loss: 1.2201 - val_acc: 0.7169\n",
+      "156/156 [==============================] - 387s 2s/step - loss: 0.0259 - acc: 0.9922 - val_loss: 1.8545 - val_acc: 0.6542\n",
       "Epoch 4/15\n",
-      "156/156 [==============================] - 393s 3s/step - loss: 0.0321 - acc: 0.9904 - val_loss: 0.4375 - val_acc: 0.8776\n",
+      "156/156 [==============================] - 387s 2s/step - loss: 0.0245 - acc: 0.9926 - val_loss: 0.8650 - val_acc: 0.7940\n",
       "Epoch 5/15\n",
-      "156/156 [==============================] - 393s 3s/step - loss: 0.0273 - acc: 0.9910 - val_loss: 0.7590 - val_acc: 0.8149\n",
+      "156/156 [==============================] - 387s 2s/step - loss: 0.0234 - acc: 0.9930 - val_loss: 0.6150 - val_acc: 0.8301\n",
       "Epoch 6/15\n",
-      "156/156 [==============================] - 394s 3s/step - loss: 0.0321 - acc: 0.9903 - val_loss: 1.9670 - val_acc: 0.7239\n",
+      "156/156 [==============================] - 387s 2s/step - loss: 0.0146 - acc: 0.9958 - val_loss: 0.4786 - val_acc: 0.9077\n",
       "Epoch 7/15\n",
-      "156/156 [==============================] - 393s 3s/step - loss: 0.0258 - acc: 0.9913 - val_loss: 0.5251 - val_acc: 0.8985\n"
+      "156/156 [==============================] - 387s 2s/step - loss: 0.0116 - acc: 0.9964 - val_loss: 0.3979 - val_acc: 0.9011\n",
+      "Epoch 8/15\n",
+      "156/156 [==============================] - 387s 2s/step - loss: 0.0137 - acc: 0.9958 - val_loss: 0.5452 - val_acc: 0.8489\n",
+      "Epoch 9/15\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0170 - acc: 0.9953 - val_loss: 1.4872 - val_acc: 0.6995\n",
+      "Epoch 10/15\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0150 - acc: 0.9954 - val_loss: 0.6101 - val_acc: 0.8571\n",
+      "Epoch 11/15\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0194 - acc: 0.9946 - val_loss: 1.4613 - val_acc: 0.7003\n",
+      "Epoch 12/15\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0081 - acc: 0.9975 - val_loss: 0.7924 - val_acc: 0.8467\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f9f2f3d3eb8>"
+       "<keras.callbacks.History at 0x7f2abbb32da0>"
       ]
      },
      "execution_count": 7,
@@ -610,7 +627,7 @@
     "\n",
     "vgg16_model.compile(loss='categorical_crossentropy',\n",
     "#                     optimizer=optimizers.SGD(lr=1e-5, momentum=0.9),\n",
-    "                    optimizer=optimizers.Adam(lr=1e-4),\n",
+    "                    optimizer=optimizers.Adam(lr=5e-5),\n",
     "                    metrics=['accuracy'])  \n",
     "\n",
     "vgg16_model.fit_generator(\n",
@@ -634,31 +651,31 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "156/156 [==============================] - 397s 3s/step - loss: 0.0349 - acc: 0.9910 - val_loss: 0.4889 - val_acc: 0.9045\n",
+      "156/156 [==============================] - 387s 2s/step - loss: 0.0172 - acc: 0.9949 - val_loss: 0.4185 - val_acc: 0.9023\n",
       "Epoch 2/10\n",
-      "156/156 [==============================] - 395s 3s/step - loss: 0.0213 - acc: 0.9942 - val_loss: 0.3190 - val_acc: 0.9268\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0101 - acc: 0.9973 - val_loss: 0.5823 - val_acc: 0.8676\n",
       "Epoch 3/10\n",
-      "156/156 [==============================] - 395s 3s/step - loss: 0.0219 - acc: 0.9939 - val_loss: 1.0300 - val_acc: 0.7901\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0074 - acc: 0.9980 - val_loss: 0.3696 - val_acc: 0.8959\n",
       "Epoch 4/10\n",
-      "156/156 [==============================] - 393s 3s/step - loss: 0.0199 - acc: 0.9938 - val_loss: 0.6913 - val_acc: 0.8593\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0045 - acc: 0.9990 - val_loss: 0.3526 - val_acc: 0.9164\n",
       "Epoch 5/10\n",
-      "156/156 [==============================] - 393s 3s/step - loss: 0.0228 - acc: 0.9929 - val_loss: 1.4624 - val_acc: 0.6847\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0068 - acc: 0.9976 - val_loss: 0.9420 - val_acc: 0.7474\n",
       "Epoch 6/10\n",
-      "156/156 [==============================] - 393s 3s/step - loss: 0.0187 - acc: 0.9940 - val_loss: 1.5827 - val_acc: 0.7509\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0127 - acc: 0.9963 - val_loss: 0.5669 - val_acc: 0.8593\n",
       "Epoch 7/10\n",
-      "156/156 [==============================] - 392s 3s/step - loss: 0.0171 - acc: 0.9947 - val_loss: 0.7462 - val_acc: 0.8841\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0058 - acc: 0.9985 - val_loss: 0.9212 - val_acc: 0.7731\n",
       "Epoch 8/10\n",
-      "156/156 [==============================] - 392s 3s/step - loss: 0.0145 - acc: 0.9954 - val_loss: 0.6143 - val_acc: 0.8924\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0138 - acc: 0.9960 - val_loss: 0.6445 - val_acc: 0.8428\n",
       "Epoch 9/10\n",
-      "156/156 [==============================] - 393s 3s/step - loss: 0.0102 - acc: 0.9968 - val_loss: 0.6886 - val_acc: 0.8567\n",
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0071 - acc: 0.9976 - val_loss: 0.3867 - val_acc: 0.9094\n",
       "Epoch 10/10\n",
-      "156/156 [==============================] - 392s 3s/step - loss: 0.0155 - acc: 0.9951 - val_loss: 0.7199 - val_acc: 0.8027\n"
+      "156/156 [==============================] - 386s 2s/step - loss: 0.0083 - acc: 0.9976 - val_loss: 0.7026 - val_acc: 0.8036\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f9f30585e80>"
+       "<keras.callbacks.History at 0x7f2ab9d68550>"
       ]
      },
      "execution_count": 8,
@@ -667,10 +684,7 @@
     }
    ],
    "source": [
-    "vgg16_model.compile(loss='categorical_crossentropy',\n",
-    "#                     optimizer=optimizers.SGD(lr=1e-5, momentum=0.9),\n",
-    "                    optimizer=optimizers.Adam(lr=1e-4),\n",
-    "                    metrics=['accuracy'])  \n",
+    "vgg16_model.optimizer.lr = 1e-5\n",
     "\n",
     "vgg16_model.fit_generator(\n",
     "                        train_generator,\n",
@@ -681,6 +695,15 @@
     "                        callbacks=[TensorBoard(log_dir='./logs/vgg16_fine_tune'),\n",
     "                                   CSVLogger('vgg16_fine_tune')])\n",
     "#                                    EarlyStopping(patience=5)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_model(vgg16_model,test_path,csv='vgg16_submission_0415.csv')"
    ]
   },
   {
